Rewrite the way we handle staker stats (#266)
* fix: Rewrite the way we handle staker stats, calculate on the fly


---------
