# docs/swagger.json
@@ -631,7 +631,7 @@
         },
         "/v2/staker/stats": {
             "get": {
-                "description": "Fetches staker stats for babylon staking including active tvl and active delegations.",
+                "description": "Fetches staker stats for babylon staking including active tvl,",
                 "produces": [
                     "application/json"
                 ],
@@ -646,6 +646,12 @@
                         "name": "staker_pk_hex",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Babylon address of the staker to fetch",
+                        "name": "babylon_address",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1417,6 +1423,14 @@
                 "active_tvl": {
                     "type": "integer"
                 },
+                "total_active_delegations": {
+                    "description": "This represents the total active delegations on BTC chain which includes\nboth phase-1 and phase-2 active delegations",
+                    "type": "integer"
+                },
+                "total_active_tvl": {
+                    "description": "This represents the total active tvl on BTC chain which includes\nboth phase-1 and phase-2 active tvl",
+                    "type": "integer"
+                },
                 "total_finality_providers": {
                     "type": "integer"
                 }
@@ -1448,8 +1462,11 @@
                 "active_tvl": {
                     "type": "integer"
                 },
-                "staker_pk_hex": {
-                    "type": "string"
+                "slashed_delegations": {
+                    "type": "integer"
+                },
+                "slashed_tvl": {
+                    "type": "integer"
                 },
                 "unbonding_delegations": {
                     "type": "integer"
